2014-10-30  Jan Djärv  <jan.h.d@swipnet.se>

	* nsterm.h (EmacsScroller): Replace Lisp_Object win with
	struct window* (Bug#18889).
	Remove getMouseMotionPart.
	(ns_output): Make icon_top/left int.

	* nsfns.m (x_icon): icon_top/left is int.

	* nsterm.m (ns_mouse_position): Remove unused code.
	(initFrame:window:, dealloc): Use window instead of win.
	(getMouseMotionPart:window:x:y:): Remove, unused.
	(sendScrollEventAtLoc:fromEvent:): Make Lisp_Object win from window.

2014-10-30  Samuel Bronson  <naesten@gmail.com>

	* unexmacosx.c (copy_data_segment): Port to GCC 4.6+ (Bug#9927).

2014-10-28  Eli Zaretskii  <eliz@gnu.org>

	* fileio.c (Fexpand_file_name): Use make_unibyte_string, not
	build_string, when importing a home directory.  (Bug#18873)

2014-10-26  Eli Zaretskii  <eliz@gnu.org>

	* dispnew.c (buffer_posn_from_coords): Use
	WINDOW_WANTS_HEADER_LINE_P, not WINDOW_WANTS_MODELINE_P, to
	account for the header-line height.  (Bug#18839)

2014-10-22  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* xdisp.c (draw_glyphs): Set clipping to highlight boundaries.
	[Backport]
	(erase_phys_cursor): Fix confusion between window-relative and
	text area-relative x-coordinates.  [Backport]

2014-10-20  Glenn Morris  <rgm@gnu.org>

	* minibuf.c (history-length): Increase default from 30 to 100.
	[Backport]

2014-10-20  Stefan Monnier  <monnier@iro.umontreal.ca>

	* xdisp.c (redisplay_window): Re-run pre-redisplay-function after we
	move point.

2014-10-20  Glenn Morris  <rgm@gnu.org>

	* Version 24.4 released.

2014-10-17  Eli Zaretskii  <eliz@gnu.org>

	* xterm.c (x_draw_hollow_cursor): Fix display of hollow cursor on
	1-pixel R2L characters.
	Reported by Dmitry Antipov <dmantipov@yandex.ru>, see
	http://lists.gnu.org/archive/html/emacs-devel/2014-10/msg00518.html.

2014-10-10  Paul Eggert  <eggert@cs.ucla.edu>

	Fix port to Debian GNU/kFreeBSD 7 (wheezy) (Bug#18666).
	* process.c (accept4) [!HAVE_ACCEPT4]: New macro.
